[gd_scene load_steps=5 format=3 uid="uid://3akf8ev4o7i0"]

[ext_resource type="Script" uid="uid://dwxy44e7ieqfn" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://d1klpxhunm2sr" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dkxu47mw57mpm" path="res://player.tscn" id="2_h2yge"]

[sub_resource type="Curve2D" id="Curve2D_1bvp3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -12, 246, 0, 0, 0, 0, 224, 29, 0, 0, 0, 0, 1048, 22)
}
point_count = 3

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_1bvp3")

[node name="Player" parent="." instance=ExtResource("2_h2yge")]
position = Vector2(281, 1033)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_1bvp3")

[node name="MobSpawnLocation" type="PathFollow2D" parent="Path2D"]
position = Vector2(-12, 246)
rotation = -0.74348

[node name="MobTimer" type="Timer" parent="."]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
